--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,14 +3,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="popup.css"/>
+	
+	<script src="popup.js"></script>
+	
   </head>
 
 <body>
+
   <div class="page-choice">developer.mozilla.org</div>
   <div class="page-choice">support.mozilla.org</div>
   <div class="page-choice">addons.mozilla.org</div>
-  <script src="main.js"></script>
+  <div  class="page-choice">popup/popup.html</div>
 </body>
 
 </html>
