--- a/record/record.html
+++ b/record/record.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="record.css" />
-    <title>HLS</title>
+    <title>Record</title>
   </head>
   <body>
     <div class="buttonContainer">
