--- a/popup/popup.html
+++ b/popup/popup.html
@@ -2,14 +2,48 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="popup.css" />
     <title>HLS</title>
+	<style type="text/css">
+		html, body,div {
+			padding: 0;
+			margin: 0;
+		}
+
+		.buttonContainer{
+			margin:0 auto;
+			width:200px;
+		}
+
+		.pageButton{
+			background-color: #4CAF50; /* Green */
+			width:120px;
+			color: white;
+			font-size: 24px;
+			border-radius:4px;
+			display:block;
+			margin:20px auto;
+			text-align:center;
+			-webkit-user-select:none;
+			-moz-user-select:none;
+			-ms-user-select:none;
+			user-select:none;
+		}
+
+		.pageButton:hover{
+			background-color:#90EE90;
+			color:red;
+			cursor: pointer;
+		}
+		.pageButton:active{
+			background-color:#73fc80;
+		}
+	</style>
   </head>
   <body>
     <div class="buttonContainer">
 		<div id="record" class="pageButton">记录
 		</div>
-		<div id="advertisement" class="pageButton">页面过滤
+		<div id="advertisement" class="pageButton">净化网页
 		</div>
 	</div>
 	<script src="popup.js"></script>
