--- a/advertisement/advertisement.html
+++ b/advertisement/advertisement.html
@@ -47,7 +47,7 @@
   		<div class="noti">注意</div>
 		<div class="showNoti">
 			<ul>
-				<li>1.右键点击【拦截广告】即可拦截该页面所有JavaScript</li>
+				<li>1.右键点击【净化网页】即可拦截该页面所有JavaScript</li>
 				<li>2.如果页面显示异常，有选择地删除该域名下的JavaScript</li>
 				<li>3.多数情况下删除该域名下的URL不影响拦截功能</li>
 				<li>4.非该域名下的URL，多数情况不用删除</li>
